--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
   "type": "module",
-  "scripts":{
-    "dev":"node src/main.js"
+  "scripts": {
+    "dev": "vite-node src/main.js"
   },
   "dependencies": {
+    "@discordjs/voice": "0.16.0",
     "discord.js": "^14.15.3",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "fast-glob": "^3.3.2",
+    "ffmpeg-static": "^5.2.0",
+    "libsodium-wrappers": "^0.7.14",
+    "pinia": "^2.1.7",
+    "play-dl": "^1.9.7",
+    "vite-node": "^2.0.4",
+    "vue": "^3.4.33"
   }
 }
